--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Build and Release Installer
 on:
   workflow_dispatch:
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
 
 jobs:
   deploy-to-github-releases:
@@ -14,8 +14,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Remover o 'v' da tag        
-        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - name: Get Version from Project File
+        id: get-version
+        shell: bash
+        run: echo "version=$(grep -oE '<Version>[^<]+' MyApplication/MyApplication.csproj | sed 's/<Version>//')" >> $GITHUB_OUTPUT
+      # - name: Remover o 'v' da tag        
+      #   run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
 
       - name: Install .NET
         uses: actions/setup-dotnet@v4
@@ -23,23 +27,23 @@ jobs:
           dotnet-version: 8.0.x
 
       - name: Publish Application
-        run: dotnet publish -c Release --self-contained -r win-x64 -o .\publish
+        run: dotnet publish ZapEnvioSeguro.csproj -c Release -o publish -r win-x64 --self-contained true
 
       - name: Create Velopack Release
         run: |
           dotnet tool install -g vpk
-          vpk download github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --token ${{ secrets.GITHUB_TOKEN }}
-          vpk pack -u ZapEnvioSeguro -v ${{ env.VERSION}} -p publish
-          vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ env.CLEAN_VERSION }}" --tag ${{ github.ref_name }} --token ${{ secrets.GITHUB_TOKEN }}
-
-        # Criar tag no repositório  público
+          vpk download github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro
+          vpk pack -u ZapEnvioSeguro -v ${{ steps.get-version.outputs.version }} -p publish
+          vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ steps.get-version.outputs.version }}" --tag v${{ steps.get-version.outputs.version }}
+        
+          # Criar tag no repositório  público
       - name: Create Tag in Public Repo
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # Configurações
           $repoPublic = "tainanflores/ZapEnvioSeguroUpdates"
-          $tagName = "${{ github.ref_name }}"
+          $tagName = "v${{steps.get-version.outputs.version }}"
 
           # Criar a tag no repositório público
           git config --global user.email "actions@github.com"
@@ -57,7 +61,7 @@ jobs:
         run: |
           # Configurações
           $repoPublic = "tainanflores/ZapEnvioSeguroUpdates"
-          $tagName = "${{ github.ref_name }}"
+          $tagName = "v${{ steps.get-version.outputs.version }}"
           $releaseName = "Release $tagName"
 
           # Criar release no repositório público
