--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Build and Release Installer
 on:
   workflow_dispatch:
   push:
-    branches:
-      - master
+    tags:
+      - 'v*'
 
 jobs:
   deploy-to-github-releases:
@@ -14,12 +14,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Get Version from Project File
-        id: get-version
-        shell: bash
-        run: echo "version=$(grep -oE '<Version>[^<]+' MyApplication/MyApplication.csproj | sed 's/<Version>//')" >> $GITHUB_OUTPUT
-      # - name: Remover o 'v' da tag        
-      #   run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - name: Definir Variável VERSION sem "v"
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+
+      - name: Print VERSION to Console
+        uses: echo "VERSION IS- $VERSION"
 
       - name: Install .NET
         uses: actions/setup-dotnet@v4
@@ -33,8 +32,8 @@ jobs:
         run: |
           dotnet tool install -g vpk
           vpk download github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro
-          vpk pack -u ZapEnvioSeguro -v ${{ steps.get-version.outputs.version }} -p publish
-          vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ steps.get-version.outputs.version }}" --tag v${{ steps.get-version.outputs.version }}
+          vpk pack -u ZapEnvioSeguro -v ${{ env.VERSION }} -p publish
+          vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ env.VERSION }}" --tag v${{ env.VERSION }}
         
           # Criar tag no repositório  público
       - name: Create Tag in Public Repo
@@ -43,7 +42,7 @@ jobs:
         run: |
           # Configurações
           $repoPublic = "tainanflores/ZapEnvioSeguroUpdates"
-          $tagName = "v${{steps.get-version.outputs.version }}"
+          $tagName = "v${{ env.VERSION }}"
 
           # Criar a tag no repositório público
           git config --global user.email "actions@github.com"
@@ -61,7 +60,7 @@ jobs:
         run: |
           # Configurações
           $repoPublic = "tainanflores/ZapEnvioSeguroUpdates"
-          $tagName = "v${{ steps.get-version.outputs.version }}"
+          $tagName = "v${{ env.VERSION }}"
           $releaseName = "Release $tagName"
 
           # Criar release no repositório público
