--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
 
       - name: Print VERSION to Console
-        uses: echo "VERSION IS- $VERSION"
+        run: echo "VERSION IS- $VERSION"
 
       - name: Install .NET
         uses: actions/setup-dotnet@v4
