--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Definir Variável VERSION sem "v"
-        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - name: Write release version
+        run: |
+          VERSION=${GITHUB_REF_NAME#v}
+          echo Version: $VERSION
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Print VERSION to Console
-        run: echo "VERSION IS- ${{ env.VERSION }}"
+      # Use version in other step
+      - name: Read version
+        run: echo Version now is ${VERSION}
 
       - name: Install .NET
         uses: actions/setup-dotnet@v4
