--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Create Velopack Release
         run: |
           dotnet tool install -g vpk
-          vpk download github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro
+          vpk download github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --token ${{ secrets.GITHUB_TOKEN }}
           vpk pack -u ZapEnvioSeguro -v ${{ env.VERSION }} -p publish
-          vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ env.VERSION }}" --tag v${{ env.VERSION }}
+          vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ env.VERSION }}" --tag v${{ env.VERSION }} --token ${{ secrets.GITHUB_TOKEN }}
         
           # Criar tag no repositório  público
       - name: Create Tag in Public Repo
