--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,55 +36,18 @@ jobs:
           vpk pack -u ZapEnvioSeguro -v ${{ env.VERSION }} -p publish
           vpk upload github --repoUrl https://github.com/tainanflores/ZapEnvioSeguro --publish --releaseName "ZapEnvioSeguro ${{ env.VERSION }}" --tag v${{ env.VERSION }} --token ${{ secrets.GITHUB_TOKEN }}
         
-          # Criar tag no repositório  público
-      - name: Create Tag in Public Repo
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout Updates Repository
+        uses: actions/checkout@v4
+        with:
+          repository: tainanflores/ZapEnvioSeguroUpdates
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Copy Releases to Updates Repository
         run: |
-          # Configurações
-          $repoPublic = "tainanflores/ZapEnvioSeguroUpdates"
-          $tagName = "v${{ env.VERSION }}"
-
-          # Criar a tag no repositório público
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git clone --depth=1 https://x-access-token:$secrets.GITHUB_TOKEN@github.com/$repoPublic.git repo-public
-          cd repo-public
-          git tag $tagName
-          git push origin $tagName
-          cd ..
-
-      # Upload da release para o repositório público
-      - name: Upload Release to Public Repo
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Configurações
-          $repoPublic = "tainanflores/ZapEnvioSeguroUpdates"
-          $tagName = "v${{ env.VERSION }}"
-          $releaseName = "Release $tagName"
-
-          # Criar release no repositório público
-          $releaseResponse = Invoke-RestMethod -Uri "https://api.github.com/repos/$repoPublic/releases" `
-                                              -Method POST `
-                                              -Headers @{Authorization = "token $secrets.GITHUB_TOKEN"; "Accept" = "application/vnd.github.v3+json"} `
-                                              -Body (@{tag_name = $tagName; name = $releaseName; body = "Nova versão disponível!"; draft = $false; prerelease = $false} | ConvertTo-Json -Depth 10)
-
-          # Obter o ID da release pública
-          $releaseId = $releaseResponse.id
-
-          # Fazer upload dos arquivos para a release pública
-          $files = @("Releases/assets.win", "Releases/com.zapenvioseguro-0.0.1-full", "Releases/com.zapenvioseguro-win-Portable.zip", "Releases/com.zapenvioseguro-win-Setup.exe", "Releases/RELEASES", "Releases/releases.win.json")
-          foreach ($file in $files) {
-            if (Test-Path $file) {
-              $fileName = [System.IO.Path]::GetFileName($file)
-              Invoke-RestMethod -Uri "https://uploads.github.com/repos/$repoPublic/releases/$releaseId/assets?name=$fileName" `
-                                -Method POST `
-                                -Headers @{Authorization = "token $secrets.GITHUB_TOKEN"; "Content-Type" = "application/octet-stream"} `
-                                -InFile $file
-            } else {
-              Write-Host "File not found: $file"
-              exit 1
-            }
-          }
-
+          rm -rf *
+          cp -r ../Releases/* ./
+          git add .
+          git commit -m "Release version ${{ env.VERSION }}"
+          git tag -a v${{ env.VERSION }} -m "Release version ${{ env.VERSION }}"
+          git push origin main --tags
+        shell: bash
