bug fix: busca telefone sem formatar | feature: add nome msg, add loading

--- a/ZapEnvioSeguro.csproj
+++ b/ZapEnvioSeguro.csproj
@@ -85,6 +85,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Assets\loading.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
